2011-05-31  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>

        Reviewed by Simon Hausmann.

        [Qt] User-agent list of Qt test browsers is very outdated
        https://bugs.webkit.org/show_bug.cgi?id=61531

        The user can edit the user-agent manually, so there's no need to have
        a super complete and up to date list, but it's nice to have it
        minimally updated.

        * MiniBrowser/qt/useragentlist.txt:
        * QtTestBrowser/useragentlist.txt:

2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61425

        Buildfix for --minimal and CONFIG+=qt_minimal build.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::createChrome):
        * QtTestBrowser/launcherwindow.h:

2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61425

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::createChrome):
        (LauncherWindow::showFindBar):
        (LauncherWindow::find):
        * QtTestBrowser/launcherwindow.h:

2011-05-26  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] QtTestBrowser "Switch User Agent" dialog is broken
        https://bugs.webkit.org/show_bug.cgi?id=61527

        The setMaximumHeight() call is unecessary and breaks the dialog at
        least on my setup.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::showUserAgentDialog):

2011-05-13  Adam Roben  <aroben@apple.com>

        Add a plugin test that dumps the plugin window's rect
